--- a/index.html
+++ b/index.html
@@ -27,10 +27,9 @@
     <div class="container">
       <section id="main_content">
 /*
-<pre><code>$ cd your_repo_root/repo_name
+$ cd your_repo_root/repo_name
 $ git fetch origin
 $ git checkout gh-pages
-</code></pre>
 */
       </section>
     </div>
